[package]
name = "mdtc"
version = "0.1.0"
edition = "2021"
authors = ["Chance Linz <clinz.dev@gmail.com>"]
license = "ISC"
description = "A simple program to generate a markdown table for the user"
readme = "README.md"
homepage = "https://github.com/chancehl/mdtc"
repository = "https://github.com/chancehl/mdtc"
keywords = ["cli", "markdown", "table"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
clipboard = "0.5.0"
colored = "2.0.0"
